# libircclient

./: .gitignore  CMakeLists.txt  README.md  config.status  configure  configure.in
cmake/: ide.cmake  utils.cmake
examples/: CMakeLists.txt  Makefile  censor.cpp  colors.cpp  ircftp.cpp
include/: libirc_events.h  libircclient.h
include/libircclient/: client.h
src/: Makefile  Makefile.in  libircclient.c  params.h  ssl.c  utils.c  version.h
